--- a/package.json
+++ b/package.json
@@ -8,17 +8,19 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" \"*.{yaml,yml,json,js}\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
+    "lint:fix": "npm run lint -- --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:eslint": "jest --config ./.eslintplugin/jest-eslint.json"
   },
   "dependencies": {
     "@nestjs/common": "7.0.13",
@@ -39,9 +41,14 @@
     "@typescript-eslint/eslint-plugin": "2.33.0",
     "@typescript-eslint/parser": "2.33.0",
     "eslint": "7.0.0",
+    "eslint-config-airbnb-typescript": "7.2.1",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-import": "2.20.2",
+    "eslint-plugin-jest": "23.13.0",
+    "eslint-plugin-local": "1.0.0",
+    "husky": "4.2.5",
     "jest": "26.0.1",
+    "lint-staged": "10.2.2",
     "prettier": "2.0.5",
     "supertest": "4.0.2",
     "ts-jest": "26.0.0",
@@ -63,5 +70,19 @@
     },
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "{src,test}/**/*.ts": [
+      "eslint --fix --quiet",
+      "prettier --write"
+    ],
+    "*.{yaml,yml,json,js}": [
+      "prettier --write"
+    ]
   }
 }
