--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es2017",
+    "lib": ["es2020.string"],
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
