--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
+    "express": "^4.17.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4"
@@ -49,6 +50,8 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jest": "^23.11.0",
     "eslint-plugin-local": "^1.0.0",
+    "express-list-endpoints": "^4.0.1",
+    "glob": "^7.1.6",
     "husky": "^4.2.5",
     "jest": "^25.1.0",
     "lint-staged": "^10.2.2",
