--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,43 @@
 version: '3.1'
 volumes:
   # Persistent volumes, not mapped to avoid permission issues under Windows
-  nameit-postgres-data:
-  nameit-pgadmin4-data:
+  nestjs-thing-postgres-data:
+  nestjs-thing-pgadmin4-data:
 services:
-  nameit-postgres:
+  nestjs-thing-postgres:
     image: postgres:11.6
     restart: always
     ports:
       - 5432:5432
     volumes:
       - ./docker/postgres/init:/docker-entrypoint-initdb.d
-      - nameit-postgres-data:/var/lib/postgresql/data
+      - nestjs-thing-postgres-data:/var/lib/postgresql/data
     environment:
       POSTGRES_PASSWORD: root
       POSTGRES_USER: admin
       POSTGRES_DATABASES: app,app_test
 
-  nameit-pgadmin4:
+  nestjs-thing-pgadmin4:
     image: dpage/pgadmin4
     restart: always
     depends_on:
-      - nameit-postgres
+      - nestjs-thing-postgres
     ports:
       - 8080:80
     volumes:
-      - nameit-pgadmin4-data:/var/lib/pgadmin
+      - nestjs-thing-pgadmin4-data:/var/lib/pgadmin
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@pgadmin
       PGADMIN_DEFAULT_PASSWORD: root
     logging:
       driver: none
 
-  nameit:
+  nestjs-thing:
     image: node:12
-    container_name: nameit
+    container_name: nestjs-thing
     depends_on:
-      - nameit-pgadmin4
-      - nameit-postgres
+      - nestjs-thing-pgadmin4
+      - nestjs-thing-postgres
     working_dir: /app
     expose:
       - '3000'
@@ -46,7 +46,7 @@ services:
     volumes:
       - ./bin/:/app/bin/:cached
       - ./docs/:/app/docs/:cached
-      - ./docker/nameit/init/wait-for-services.sh:/app/docker/nameit/init/wait-for-services.sh:cached
+      - ./docker/nestjs-thing/init/wait-for-services.sh:/app/docker/nestjs-thing/init/wait-for-services.sh:cached
       - ./src/:/app/src/:cached
       - ./test/:/app/test/:cached
       - ./nest-cli.json:/app/nest-cli.json:cached
@@ -55,4 +55,4 @@ services:
       - ./tsconfig.json:/app/tsconfig.json:cached
       - ./tsconfig.build.json:/app/tsconfig.build.json:cached
       - /app/node_modules/ # Anonymous volume to speed things up without causing platform issues
-    command: bash -c 'npm i && docker/nameit/init/wait-for-services.sh && npm run start:dev'
+    command: bash -c 'npm i && docker/nestjs-thing/init/wait-for-services.sh && npm run start:dev'
