--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,9 @@ services:
       - '3000'
     ports:
       - 3000:3000
+    environment:
+      PORT: 3000
+      BASE_URL: http://localhost:3000
     volumes:
       - ./bin/:/app/bin/:cached
       - ./docs/:/app/docs/:cached
