--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@nestjs/config": "0.4.2",
     "@nestjs/core": "7.0.13",
     "@nestjs/platform-express": "7.0.13",
+    "class-transformer": "0.2.3",
+    "class-validator": "0.12.2",
     "express": "4.17.1",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
