--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-transformer": "0.2.3",
     "class-validator": "0.12.2",
     "express": "4.17.1",
+    "helmet": "3.22.0",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
     "rxjs": "6.5.5"
@@ -42,6 +43,7 @@
     "@nestjs/schematics": "7.0.0",
     "@nestjs/testing": "7.0.13",
     "@types/express": "4.17.6",
+    "@types/helmet": "0.0.47",
     "@types/jest": "25.2.2",
     "@types/node": "14.0.1",
     "@types/supertest": "2.0.9",
