--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/platform-express": "^7.0.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
+    "axios": "^0.19.2",
     "express": "^4.17.1",
     "helmet": "^3.22.0",
     "reflect-metadata": "^0.1.13",
