--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "@nestjs/platform-express": "^7.0.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
+    "@nestjs/swagger": "^4.5.6",
     "axios": "^0.19.2",
     "express": "^4.17.1",
     "helmet": "^3.22.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
